# sentry-report-kit

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sentry_report_kit/: __init__.py  cli.py  reporting.py
src/sentry_report_kit/templates/: report.html
tests/: test_cli.py  test_reporting.py
